--- a/HelloWorld/CMakeLists.txt
+++ b/HelloWorld/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.6.4)
 
 # define a variable of project name
-set( project_name "HellowWorld")
+set( project_name "HelloWorld")
 
 # set the project as the startup project
 set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT ${project_name} )
