--- a/LibrarySample/CMakeLists.txt
+++ b/LibrarySample/CMakeLists.txt
@@ -12,7 +12,7 @@ endif (BUILD_SHARED_LIBS)
 
 project (LibraryTest)
 
-set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT "Program" )
+set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT "sample_program" )
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
