--- a/LibrarySample/CMakeLists.txt
+++ b/LibrarySample/CMakeLists.txt
@@ -14,8 +14,8 @@ project (LibraryTest)
 
 set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT "sample_program" )
 
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 add_subdirectory(Library)
 add_subdirectory(Program)
