--- a/HelloWorld-CSharp/CMakeLists.txt
+++ b/HelloWorld-CSharp/CMakeLists.txt
@@ -1,18 +1,18 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.10.1)
+set(CMAKE_SUPPRESS_REGENERATION true)
 
 # define a variable of project name
-set( project_name "HelloWorld-CSharp")
-
-enable_language(CSharp)
-
-# set the project as the startup project
-set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT ${project_name} )
+set(project_name "HelloWorld-CSharp")
 
 # define a project name
 project (${project_name})
 
+enable_language(CSharp)
+
 # define a variable SRC with file GLOB
 file(GLOB SRC *.cs)
 
-# define sources files of an executable
 add_executable(${project_name} ${SRC})
+
+set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT ${project_name})
+
