--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ jobs:
   - script: set
     displayName: Show environmental variables for debug
 
-  - script: cmake -G "Visual Studio 2019" -A  $(BuildPlatform) -S HelloWorld -B workdir
+  - script: cmake -G "Visual Studio 16 2019" -A  $(BuildPlatform) -S HelloWorld -B workdir
     displayName: cmake
 
   - script: cmake --build workdir --config $(Configuration)
